# NLP-RAG-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
code/: app.py  model.py  rag_agent.py
data/raw/: sample_document.txt
rag/: config.py  embedding_model.py  ingestion.py  llm_client.py  models.py  rag_agent.py  retriever.py
scripts/: build_index.py  docker-entrypoint.sh
