[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-lucene-chat"
version = "0.1.0"
description = "RAG chatbot with Lucene (BM25 + vector search) and Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic-ai",
    "requests",
    "sentence-transformers",
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*", "app*"]

[dependency-groups]
dev = [
    "ruff",
]

# Note: PyLucene is not included here as it requires special installation
# See README.md for PyLucene installation instructions
